--- a/PersonalFinance/app/src/main/res/layout/fragment_accounts.xml
+++ b/PersonalFinance/app/src/main/res/layout/fragment_accounts.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,7 +22,11 @@
 <!--        android:layout_weight="1"-->
 <!--        android:divider="@android:color/darker_gray"-->
 <!--        android:dividerHeight="1dp"/>-->
-
+    <ImageView
+        android:id="@+id/imageViewAccountsNoData"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/image_no_account" />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewAccounts"
         android:layout_width="match_parent"
