--- a/PersonalFinance/app/src/main/res/layout/fragment_transfers.xml
+++ b/PersonalFinance/app/src/main/res/layout/fragment_transfers.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,9 +15,17 @@
         android:drawableStart="@android:drawable/ic_input_add"
         android:layout_marginBottom="16dp"/>
 
+    <ImageView
+        android:id="@+id/imageViewTransfersNoData"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/image_no_data" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewTransfers"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="8dp" />
+
+
 </LinearLayout>
