--- a/PersonalFinance/app/src/main/res/layout/listview_income.xml
+++ b/PersonalFinance/app/src/main/res/layout/listview_income.xml
@@ -18,7 +18,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="8dp"
-            android:src="@drawable/icon_income" />
+            android:src="@drawable/icon_income_list" />
 
         <LinearLayout
             android:layout_width="0dp"
