--- a/PersonalFinance/app/src/main/res/layout/app_bar_main.xml
+++ b/PersonalFinance/app/src/main/res/layout/app_bar_main.xml
@@ -29,6 +29,7 @@
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="16dp"
+        app:tint="?attr/colorOnPrimary"
         app:srcCompat="@android:drawable/ic_input_add" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
