--- a/PersonalFinance/app/src/main/res/layout/component_pie_incomes_chart.xml
+++ b/PersonalFinance/app/src/main/res/layout/component_pie_incomes_chart.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical" >
 
     <com.github.mikephil.charting.charts.PieChart
-        android:id="@+id/expensesChart"
+        android:id="@+id/incomesChart"
         android:layout_width="match_parent"
         android:layout_gravity="left"
         android:layout_height="250dp" />
